# modal-audio-analysis

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  research.md  tweet_example.md
src/modal_audio_analysis/: __init__.py  __main__.py  cli.py  config.py  models.py
src/modal_audio_analysis/pipeline/: __init__.py  app.py  images.py  patch_allin1.py  stage1.py  stage2.py
