[project]
name = "modal-audio-analysis"
version = "0.1.0"
description = "GPU-accelerated audio analysis using Modal Labs"
readme = "README.md"
authors = [{ name = "Nikhil Thorat", email = "nsthorat@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["audio", "music", "analysis", "gpu", "modal", "stems", "bpm", "demucs"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "modal>=0.68.0",
  "pydantic>=2.0.0",
  "click>=8.0.0",
  "rich>=13.0.0",
  "numpy>=1.24.0,<2",
]

[project.scripts]
modal-audio-analysis = "modal_audio_analysis.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.8.0"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
